--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -45,14 +45,14 @@ In this chapter, data from the INTERVAL prospective cohort (N=33388) was used to
 (ref:caption-BMI-platelet-overview) **Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
 
-```{r BMI-platelet-overview, echo = FALSE , fig.scap="(ref:scaption-BMI-platelet-overview)", fig.cap="(ref:caption-BMI-platelet-overview)", out.width="80%"}
+```{r BMI-platelet-overview, echo = FALSE , fig.align = "center", fig.scap="(ref:scaption-BMI-platelet-overview)", fig.cap="(ref:caption-BMI-platelet-overview)", out.width="80%"}
 include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets.png", dpi = NA)
 ```
 
 (ref:caption-Linear-reg-MR) **Schematic of linear regression and Mendelian randomization analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders.** Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.
 (ref:scaption-Linear-reg-MR) Schematic of linear regression and Mendelian randomization frameworks for BMI and platelet trait analyses
 
-```{r Linear-reg-MR, echo = FALSE , fig.cap="(ref:caption-Linear-reg-MR)", out.width = "80%", fig.scap = "(ref:scaption-Linear-reg-MR)"}
+```{r Linear-reg-MR, echo = FALSE , fig.cap="(ref:caption-Linear-reg-MR)", out.width = "80%", fig.align = "center", fig.scap = "(ref:scaption-Linear-reg-MR)"}
 include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 ```
 ## Methods
@@ -67,7 +67,7 @@ Participants completed online questionnaires wherein they reported their height 
 
 ### Genetic data and instrument for BMI
 
-INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al. [@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. 
+INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al.[@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. 
 
 ### Study population
 
@@ -77,7 +77,7 @@ The present study was conducted on up to 33388 European ancestry INTERVAL partic
 
 (ref:scaption-INTERVAL-STROBE) A STROBE diagram outlining participants included in the INTERVAL study for BMI and platelet trait analyses.
 
-```{r INTERVAL-STROBE, echo = FALSE, out.width="60%", fig.cap="(ref:caption-INTERVAL-STROBE)", fig.scap="(ref:scaption-INTERVAL-STROBE)"}
+```{r INTERVAL-STROBE, echo = FALSE, out.width="60%", fig.cap="(ref:caption-INTERVAL-STROBE)", fig.align = "center", fig.scap="(ref:scaption-INTERVAL-STROBE)"}
 include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 ```
 
@@ -154,7 +154,7 @@ The Sysmex XN-1000 haematology analyzer measures multiple platelet traits, howev
 
 (ref:scaption-Corr-mat-dend) Correlation matrix and dendrogram of the relationship between platelet traits
 
-```{r Corr-mat-dend, echo = FALSE, out.width="95%", fig.cap="(ref:caption-Corr-mat-dend)", fig.scap= "(ref:scaption-Corr-mat-dend)"}
+```{r Corr-mat-dend, echo = FALSE, out.width="95%", fig.cap="(ref:caption-Corr-mat-dend)", fig.align = "center", fig.scap= "(ref:scaption-Corr-mat-dend)"}
 include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = NA)
 ```
 
@@ -234,11 +234,11 @@ UpperCI <- c(0.205,0.012,'-0.085',0.090)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
 mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>%
-  kable_classic_2(full_width = F) %>%
+  kable_classic_2(full_width = F, font_size = 8) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
-  column_spec(3, width = "2cm")   %>%
-  landscape()
+  column_spec(3, width = "2cm") #  %>%
+ #landscape()
 ```
 
 
@@ -246,7 +246,7 @@ column_spec(1, width = "4cm")   %>%
 
 (ref:scaption-confounder-platelets) Linear regression results for the association between age, sex, smoking and alcohol with platelet traits
 
-```{r confounder-platelets, echo = FALSE, fig.scap="(ref:scaption-confounder-platelets)", fig.cap="(ref:caption-confounder-platelets)", out.width="80%"}
+```{r confounder-platelets, echo = FALSE, fig.align = "center", fig.scap="(ref:scaption-confounder-platelets)", fig.cap="(ref:caption-confounder-platelets)", out.width="80%"}
 include_graphics(path = "figure/BMI_platelets/Confounders_platelet_forest_plot.pdf", dpi = NA)
 ```
 
@@ -270,10 +270,10 @@ Fstat <- c(1458.4,31.3,0.5,15.3,62.4)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
 mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-INT-GRS-confounders-platelets)") %>%
-  kable_classic_2(full_width = F) %>%
+  kable_classic_2(full_width = F, font_size = 8) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "6cm")   %>%
-  landscape()
+column_spec(1, width = "6cm")  # %>%
+ # landscape()
 ```
 
 ### Mendelian randomization estimates for the association between BMI and platelet traits
@@ -312,7 +312,7 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, f
 
 (ref:scaption-BMI-platelet-forest) Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits
 
-```{r BMI-platelet-forest, out.width="90%", echo = FALSE, fig.cap="(ref:caption-BMI-platelet-forest)", fig.scap = "(ref:scaption-BMI-platelet-forest)"}
+```{r BMI-platelet-forest, out.width="90%", echo = FALSE, fig.cap="(ref:caption-BMI-platelet-forest)", fig.align = "center", fig.scap = "(ref:scaption-BMI-platelet-forest)"}
 include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi = NA)
 ```
 
@@ -409,19 +409,19 @@ To determine the potential functional effects of variation in IPC, the COPTIC co
 
 (ref:scaption-IPC-aggregation) Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants
 
-```{r IPC-aggregation, echo = FALSE, out.width="85%", fig.cap="(ref:caption-IPC-aggregation)", fig.scap = "(ref:scaption-IPC-aggregation)"}
+```{r IPC-aggregation, echo = FALSE, out.width="85%", fig.cap="(ref:caption-IPC-aggregation)", fig.align = "center", fig.scap = "(ref:scaption-IPC-aggregation)"}
 include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
 ```
+
+## Discussion
+
+In this study we used data from 33,388 healthy blood donors to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP. A summary of these findings is indicated in \@ref(fig:BMI-platelet-cartoon).
 
 (ref:caption-BMI-platelet-cartoon) Graphical summary of findings
 ```{r BMI-platelet-cartoon, echo = FALSE, out.width="90%", fig.cap="(ref:caption-BMI-platelet-cartoon)"}
 include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 ```
-
-## Discussion
-
-In this study we used data from 33,388 healthy blood donors to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP.
 
 The observational and MR analyses in the current study provide evidence for a positive association between BMI and both IPC and SFL. Stratifying by NHS BMI category suggested that this estimate is strongest in the overweight category. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects[@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
 
